@@ -1,0 +1,282 @@
+/* XPM */
+static const char * settings_xpm[] = {
+"32 32 247 2",
+"  	c None",
+". 	c #898B87",
+"+ 	c #8C908A",
+"@ 	c #8C8F89",
+"# 	c #8D8F8B",
+"$ 	c #8B8D87",
+"% 	c #9D9F9B",
+"& 	c #979994",
+"* 	c #8E918B",
+"= 	c #D0D1CE",
+"- 	c #EFEFEE",
+"; 	c #FBFBFB",
+"> 	c #F3F3F2",
+", 	c #DADBD8",
+"' 	c #959794",
+") 	c #959893",
+"! 	c #E7E7E5",
+"~ 	c #E6E6E4",
+"{ 	c #939591",
+"] 	c #8F918C",
+"^ 	c #F0F1EF",
+"/ 	c #FCFCFC",
+"( 	c #FEFEFE",
+"_ 	c #F2F3F1",
+": 	c #DEE1DB",
+"< 	c #EAECE8",
+"[ 	c #F9FAF9",
+"} 	c #B3B5B1",
+"| 	c #91928E",
+"1 	c #D3D3D1",
+"2 	c #ECECEA",
+"3 	c #D3D3D0",
+"4 	c #8A8C87",
+"5 	c #8C8E89",
+"6 	c #DFE1DD",
+"7 	c #A5A6A1",
+"8 	c #90928E",
+"9 	c #969992",
+"0 	c #EEEFED",
+"a 	c #E3E5E0",
+"b 	c #D3D7CF",
+"c 	c #DDE0DA",
+"d 	c #FAFBFA",
+"e 	c #949690",
+"f 	c #90928D",
+"g 	c #D4D4CF",
+"h 	c #C8C9C4",
+"i 	c #959691",
+"j 	c #C9CBC7",
+"k 	c #F9F9F8",
+"l 	c #B4B6B2",
+"m 	c #F5F6F4",
+"n 	c #EDEFEB",
+"o 	c #D7D8D5",
+"p 	c #8B8D88",
+"q 	c #90918D",
+"r 	c #CACAC7",
+"s 	c #B2B3AD",
+"t 	c #A0A19B",
+"u 	c #8D918A",
+"v 	c #EFF0EF",
+"w 	c #8E908C",
+"x 	c #C5C6C3",
+"y 	c #EFF1EE",
+"z 	c #D7DAD3",
+"A 	c #FCFCFB",
+"B 	c #91938E",
+"C 	c #8F918D",
+"D 	c #CACAC6",
+"E 	c #ADADA8",
+"F 	c #8A8B85",
+"G 	c #FAFAFA",
+"H 	c #DDDEDC",
+"I 	c #A1A29E",
+"J 	c #BDBEBB",
+"K 	c #F8F9F8",
+"L 	c #FBFBFA",
+"M 	c #939691",
+"N 	c #C9CAC6",
+"O 	c #ACADA6",
+"P 	c #8E908A",
+"Q 	c #F8F8F7",
+"R 	c #DFE2DC",
+"S 	c #E0E3DD",
+"T 	c #FDFDFD",
+"U 	c #C8C8C5",
+"V 	c #ACADA5",
+"W 	c #8C8F8A",
+"X 	c #E4E6E3",
+"Y 	c #E5E7E3",
+"Z 	c #8E8F8B",
+"` 	c #C7C7C5",
+" .	c #ACACA6",
+"..	c #898C86",
+"+.	c #A4A5A1",
+"@.	c #D8DBD4",
+"#.	c #D1D5CD",
+"$.	c #EAEBE8",
+"%.	c #989A96",
+"&.	c #C7C8C4",
+"*.	c #ACACA5",
+"=.	c #8B8D8A",
+"-.	c #CDCECB",
+";.	c #E5E7E2",
+">.	c #CCCFC8",
+",.	c #979A95",
+"'.	c #AAABA4",
+").	c #8C8D88",
+"!.	c #ACAEA9",
+"~.	c #F1F2F0",
+"{.	c #F7F8F7",
+"].	c #E4E6E4",
+"^.	c #989B96",
+"/.	c #C7C7C4",
+"(.	c #A9AAA3",
+"_.	c #989A95",
+":.	c #C8C9C6",
+"<.	c #A8AAA6",
+"[.	c #A7A9A5",
+"}.	c #9C9D99",
+"|.	c #9A9B97",
+"1.	c #C6C6C3",
+"2.	c #ABABA4",
+"3.	c #979893",
+"4.	c #B8BAB4",
+"5.	c #EBECEA",
+"6.	c #CCCECB",
+"7.	c #8C8E8A",
+"8.	c #8F908C",
+"9.	c #C5C6C1",
+"0.	c #A7A8A2",
+"a.	c #8E8F8A",
+"b.	c #F0F0EF",
+"c.	c #D3D6D0",
+"d.	c #B3B6B0",
+"e.	c #E8E8E7",
+"f.	c #CCCECA",
+"g.	c #8D8E89",
+"h.	c #2D5690",
+"i.	c #5B7DAB",
+"j.	c #7290B5",
+"k.	c #858B8D",
+"l.	c #C3C4C0",
+"m.	c #A8A9A2",
+"n.	c #8B8C86",
+"o.	c #9D9F99",
+"p.	c #FFFFFF",
+"q.	c #F4F4F3",
+"r.	c #B4B7B2",
+"s.	c #CBCCC9",
+"t.	c #8C8D89",
+"u.	c #2E5792",
+"v.	c #9DB7D6",
+"w.	c #97B8DC",
+"x.	c #8CA0B3",
+"y.	c #B4B5B1",
+"z.	c #A6A6A1",
+"A.	c #878A87",
+"B.	c #939590",
+"C.	c #8B8D89",
+"D.	c #EAECE9",
+"E.	c #AFB2AC",
+"F.	c #E7E8E6",
+"G.	c #CACBC8",
+"H.	c #2F5791",
+"I.	c #A1BAD8",
+"J.	c #96B8DB",
+"K.	c #6C99CC",
+"L.	c #688FBC",
+"M.	c #878E8E",
+"N.	c #898F93",
+"O.	c #2D548A",
+"P.	c #B9BBB7",
+"Q.	c #F6F7F5",
+"R.	c #D2D6CE",
+"S.	c #CACBC9",
+"T.	c #8D8F89",
+"U.	c #305991",
+"V.	c #9FBAD8",
+"W.	c #9BBBDD",
+"X.	c #719BCA",
+"Y.	c #517AAC",
+"Z.	c #5888C2",
+"`.	c #4F80BF",
+" +	c #89A7CF",
+".+	c #224D8A",
+"++	c #8A8D88",
+"@+	c #D1D2CF",
+"#+	c #F3F4F3",
+"$+	c #DEE1DC",
+"%+	c #E7E7E6",
+"&+	c #BEC1BC",
+"*+	c #305990",
+"=+	c #9CB8D7",
+"-+	c #9CBCDD",
+";+	c #719ACA",
+">+	c #4B73A2",
+",+	c #628FC6",
+"'+	c #4977B3",
+")+	c #6D92C5",
+"!+	c #5B7DB0",
+"~+	c #8D8E88",
+"{+	c #B6B7B3",
+"]+	c #F3F4F1",
+"^+	c #CED2CA",
+"/+	c #BABBB8",
+"(+	c #D3D4D2",
+"_+	c #2E5690",
+":+	c #9AB6D6",
+"<+	c #9DBCDE",
+"[+	c #6E9ACA",
+"}+	c #4874AD",
+"|+	c #5D7FAC",
+"1+	c #6286B9",
+"2+	c #234E8C",
+"3+	c #B1B3AF",
+"4+	c #EEEEED",
+"5+	c #949591",
+"6+	c #5B7DAC",
+"7+	c #6D98C9",
+"8+	c #4C73A2",
+"9+	c #4773AD",
+"0+	c #5D82B4",
+"a+	c #234E8B",
+"b+	c #8D908A",
+"c+	c #A4A5A2",
+"d+	c #8B8C88",
+"e+	c #6E90BB",
+"f+	c #7BA4D2",
+"g+	c #5580B3",
+"h+	c #618EC5",
+"i+	c #4673AD",
+"j+	c #587CAC",
+"k+	c #587EB3",
+"l+	c #335B93",
+"m+	c #87AAD3",
+"n+	c #5E8CC5",
+"o+	c #4B7BB8",
+"p+	c #567BAD",
+"q+	c #547AB1",
+"r+	c #396299",
+"s+	c #688EBE",
+"t+	c #678CC0",
+"u+	c #486EA7",
+"v+	c #224B8A",
+"w+	c #234D8B",
+"x+	c #234D8C",
+"                                                                ",
+"                                                                ",
+"                                                                ",
+"                                                                ",
+"                  . + @ # $                       % &           ",
+"                * = - ; > , '                   ) ! ~ {         ",
+"              ] ^ / ( _ : < [ }               | 1 2 ! 3 4       ",
+"            5 6 7 8 9 0 a b c d e             f ! g h i         ",
+"          . j k +     l m b b n o p         q r s t #           ",
+"          u v k w     x y b b z A B       C D E F               ",
+"          5 G [ H I J K c b b b L M     C N O F                 ",
+"          P Q R < G _ S b b b b T f   C U V F                   ",
+"          W X Y b b b b b b b b ( Z f `  ...                    ",
+"            +.L @.b b b b b b #.$.%.&.*...                      ",
+"            =.-.; ;.b b b b b >.,.&.'.4                         ",
+"              ).!.~.K m {.K ].^./.(._.:.5                       ",
+"                  5 <.[.% }.|.1.2.3.4.5.6.7.                    ",
+"                          8.9.0.a.b.c.d.e.f.g.                  ",
+"                  h.i.j.k.l.m.n.o.p.A q.r.e.s.t.                ",
+"                u.v.w.x.y.z.A.  B.[.C.J D.E.F.G.t.              ",
+"              H.I.J.K.L.M.N.O.        P.Q.R.E.F.S.T.            ",
+"            U.V.W.X.Y.Z.`. +.+      ++@+#+d $+E.%+&+            ",
+"          *+=+-+;+>+,+'+)+!+          T.~+{+]+^+/+(+~+          ",
+"        _+:+<+[+>+,+}+|+1+2+              3+T A 4+5+            ",
+"        6+w.7+8+,+9+6+0+a+                b+c+B.d+              ",
+"        e+f+g+h+i+j+k+a+                                        ",
+"        l+m+n+o+p+q+a+                                          ",
+"          r+s+t+u+v+                                            ",
+"            w+x+                                                ",
+"                                                                ",
+"                                                                ",
+"                                                                "};
