@@ -7,3 +7,5 @@
 	'src/configdialog.h'.
 2016-08-27 Fred Gleason <fredg@paravelsystems.com>
 	* Added a 'Count Up/Count Down' control.
+2016-08-27 Fred Gleason <fredg@paravelsystems.com>
+	* Added a Setup button.
